--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,23 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      HOSPITAL APP
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content padding  class="bg">
+  
+  
+      <img src="assets/imgs/download.jpeg">
+   
+
+      <button ion-button full round color="dark"(click)="login()">LOG IN</button>
+
+      <button ion-button full round color="dark" (click)="signin()">SIGN UP</button>
+
+ 
+ 
+
+
 </ion-content>
