--- a/src/pages/advance/advance.html
+++ b/src/pages/advance/advance.html
@@ -26,9 +26,9 @@
             <p>Years Of Experiance={{items.Year}}</p>
             <p>{{items.Spec}} Specialist</p>
           </ion-item>
-          <button ion-button full round color="dark">More Information</button>
+          <button ion-button full round  color="dark">More Information</button>
         
-          <button ion-button full round color="dark" >Book Appointment</button>
+          <button ion-button full round (click)="appoint()" color="dark" >Book Appointment</button>
         </ion-card>
         
         </ion-list>
